# autoresearch-or

./: .gitignore  LICENSE  README.md  optimize.py  ortools_baselines.tsv  plot_results.ipynb  prepare.py  program_TSP.md  pyproject.toml  results.tsv  results_small.tsv
results/medium/: 20260325T094843896863Z_medium_seed0.json  20260325T095049041454Z_medium_seed0.json  20260325T095354068890Z_medium_seed0.json
results/small/: 20260324T181027077512Z_small_seed0.json  20260324T181144245145Z_small_seed0.json  20260324T182125846121Z_small_seed0.json  20260324T182214743817Z_small_seed0.json  20260324T182426782541Z_small_seed0.json  20260324T182453847422Z_small_seed0.json  20260324T182543626867Z_small_seed0.json  20260324T182615742024Z_small_seed0.json  20260324T183043903539Z_small_seed0.json  20260324T183103424918Z_small_seed0.json  20260324T183324236333Z_small_seed0.json  20260324T183625755249Z_small_seed0.json  20260324T184328648342Z_small_seed0.json  20260324T184524277907Z_small_seed0.json  20260324T184728431177Z_small_seed0.json  20260324T185119189913Z_small_seed0.json  20260324T190147858031Z_small_seed0.json  20260324T190404529133Z_small_seed0.json  20260324T190852655202Z_small_seed0.json  20260324T191128612994Z_small_seed0.json  20260324T191255068302Z_small_seed0.json  20260324T191430759161Z_small_seed0.json  20260324T192427180547Z_small_seed0.json  20260324T193531274919Z_small_seed0.json  20260324T193855916265Z_small_seed0.json  20260324T194541373579Z_small_seed0.json  20260324T200410736807Z_small_seed0.json  (+104 more)
scripts/: ortools_tsp_baseline.py
(+3 files in other folders)
