[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-or"
version = "0.1.0"
description = "Minimal local autoresearch scaffold for heuristic TSP experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
py-modules = ["prepare", "optimize"]
